# gokart-pipeliner

./: .gitignore  README.md  pyproject.toml
examples/: Example.ipynb  SampleTasks.py  Untitled.ipynb
gokart_pipeliner/: __init__.py  config_manager.py  enum.py  instantiation_task.py  pipeliner.py
test/unittest/: sample_config.ini  test_config_manager.py  test_instatiation_task.py  test_pipeliner.py
